updated some more referrences

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <h2><span class="green block">Join us</span> as a SAP Consultant <span class="light block">@ Deloitte European Delivery Center</span><span class="locate block">Bucharest and other cities in Romania!</span></h2>
       </div>
       <div class="e-header__right">
-        <img class="hero-img" src="/img/hero-img.png" data-source="/img/hero-img-good.png" alt="" />
+        <img class="hero-img" src="img/hero-img.png" data-source="img/hero-img-good.png" alt="" />
       </div>
     </header>
     <section class="e-section section-1 grid">
       <h3 class="section-1__title">Why join us</h3>
-      <div class="section-1__element flex img-element"><img src="/img/join-us-img.png" alt="" /></div>
+      <div class="section-1__element flex img-element"><img src="img/join-us-img.png" alt="" /></div>
       <div class="section-1__element flex">
         <p class="element-text light"><span class="green bold">Become the best SAP consultant</span> you can be through an <span class="green bold">intensive BOOTCAMP</span> during the first weeks in our team</p>
       </div>
@@ -133,14 +133,14 @@
       <h3>About ERDC & SAP:</h3>
       <p class="light">How can you navigate relentless disruption and tomorrow's uncertainty? By becoming a more Kinetic Enterprise™ - an intelligent enterprise built to evolve. It's time to reimagine everything. Deloitte can show you how - and help you make an impact with SAP® solutions</p>
       <p class="light">Deloitte received four 2019 SAP® Pinnacle Awards. Named Digital partner of the Year, as well as Partner of the Year for Customer Experience and SAP® SuccessFactors® - also winning for PurposeDriven partner Application of the Year. This year marks the second year in a row that Deloitte has received four SAP Pinnacle Awards - the most received by any SAP partner in 2019, or any other year.</p>
-      <div class="awards-wrapper flex"><img src="/img/sap-award.png" alt="" class="awards__image" /><img src="/img/sap-award.png" alt="" class="awards__image" /><img src="/img/sap-award.png" alt="" class="awards__image" /><img src="/img/sap-award.png" alt="" class="awards__image" /><img src="/img/sap-award.png" alt="" class="awards__image" /></div>
+      <div class="awards-wrapper flex"><img src="img/sap-award.png" alt="" class="awards__image" /><img src="img/sap-award.png" alt="" class="awards__image" /><img src="img/sap-award.png" alt="" class="awards__image" /><img src="img/sap-award.png" alt="" class="awards__image" /><img src="img/sap-award.png" alt="" class="awards__image" /></div>
     </section>
     <section class="e-section section-6">
       <div class="social-container grid">
         <h3>Follow us on:</h3>
-        <a href="#" target="_blank" class="social-link"><img src="/img/fb.svg" alt="facebook social link" /></a>
-        <a href="#" target="_blank" class="social-link"><img src="/img/insta.svg" alt="instagram social link" /></a>
-        <a href="#" target="_blank" class="social-link"><img src="/img/linkedin.svg" alt="linkedin social link" /></a>
+        <a href="#" target="_blank" class="social-link"><img src="img/fb.svg" alt="facebook social link" /></a>
+        <a href="#" target="_blank" class="social-link"><img src="img/insta.svg" alt="instagram social link" /></a>
+        <a href="#" target="_blank" class="social-link"><img src="img/linkedin.svg" alt="linkedin social link" /></a>
       </div>
     </section>
     <!-- Insert script -->
