--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <h2><span class="green block">Join us</span> as a SAP Consultant <span class="light block">@ Deloitte European Delivery Center</span><span class="locate block">Bucharest and other cities in Romania!</span></h2>
       </div>
       <div class="e-header__right">
-        <img class="hero-img" src="img/hero-img.png" data-source="img/hero-img-good.png" alt="" />
+        <img class="hero-img lazy-img" src="img/hero-img.png" data-source="img/hero-img-good.png" alt="" />
       </div>
     </header>
     <section class="e-section section-1 grid">
       <h3 class="section-1__title">Why join us</h3>
-      <div class="section-1__element flex img-element"><img src="img/join-us-img.png" alt="" /></div>
+      <div class="section-1__element flex img-element"><img class = "lazy-img" src="img/join-us-img.png" data-source="img/join-us-img-good.png" alt="" /></div>
       <div class="section-1__element flex">
         <p class="element-text light"><span class="green bold">Become the best SAP consultant</span> you can be through an <span class="green bold">intensive BOOTCAMP</span> during the first weeks in our team</p>
       </div>
