--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="e-header grid">
       <div class="e-header__left flex">
-        <h1>Reimagine <br />your career</h1>
+        <h1>Reimagine <span class="block nowrap">your career</span></h1>
         <h2><span class="green block">Join us</span> as a SAP Consultant <span class="light block">@ Deloitte European Delivery Center</span><span class="locate block">Bucharest and other cities in Romania!</span></h2>
       </div>
       <div class="e-header__right">
@@ -107,27 +107,27 @@
       <div class="section-4__job flex">
         <h4>SAP Financial Consultant</h4>
         <p class="job-desc-button" data-job="1">Job Description <span class="arrow"></span></p>
-        <a href="#" class="btn btn__apply">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2796187132/" class="btn btn__apply desktop-link">Apply now</a>
       </div>
       <div class="section-4__job flex">
         <h4>SAP QM Consultant <span class="light block">Quality Management</span></h4>
         <p class="job-desc-button" data-job="2">Job Description <span class="arrow"></span></p>
-        <a href="#" class="btn btn__apply">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2794990092/" class="btn btn__apply desktop-link">Apply now</a>
       </div>
       <div class="section-4__job flex">
         <h4>SAP Consultant <span class="light block">Production Planning</span></h4>
         <p class="job-desc-button" data-job="3">Job Description <span class="arrow"></span></p>
-        <a href="#" class="btn btn__apply">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2794990092/" class="btn btn__apply desktop-link">Apply now</a>
       </div>
       <div class="section-4__job flex">
         <h4>SAP Logistics Consultant <span class="light block">(MM and/or SD)</span></h4>
         <p class="job-desc-button" data-job="4">Job Description <span class="arrow"></span></p>
-        <a href="#" class="btn btn__apply">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2796187742/" class="btn btn__apply desktop-link">Apply now</a>
       </div>
       <div class="section-4__job flex">
         <h4>SAP EWM Consultant <span class="light block">Extended Warehouse Management</span></h4>
         <p class="job-desc-button" data-job="5">Job Description <span class="arrow"></span></p>
-        <a href="#" class="btn btn__apply">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2794903274/" class="btn btn__apply desktop-link">Apply now</a>
       </div>
     </section>
     <section class="e-section section-5">
@@ -145,9 +145,9 @@
     <section class="e-section section-6">
       <div class="social-container grid">
         <h3>Follow us on:</h3>
-        <a href="#" target="_blank" class="social-link"><img src="img/fb.svg" alt="facebook social link" /></a>
-        <a href="#" target="_blank" class="social-link"><img src="img/insta.svg" alt="instagram social link" /></a>
-        <a href="#" target="_blank" class="social-link"><img src="img/linkedin.svg" alt="linkedin social link" /></a>
+        <a href="https://www.facebook.com/DeloitteTechnologyRomania" target="_blank" class="social-link"><img src="img/fb.svg" alt="facebook social link" /></a>
+        <a href="https://www.instagram.com/deloitte.technology.romania/?hl=en" target="_blank" class="social-link"><img src="img/insta.svg" alt="instagram social link" /></a>
+        <a href="https://www.linkedin.com/company/deloitte-technology-ro/posts/?feedView=all" target="_blank" class="social-link"><img src="img/linkedin.svg" alt="linkedin social link" /></a>
       </div>
     </section>
     <div id="pop-up-overlay" class=""></div>
@@ -160,52 +160,47 @@
           >
         </h4>
         <div class="job-container__background">
-          <h5>Digital Background</h5>
-          <p>We imagine, deliver and run the future. At Deloitte, the worlds of business, creative, and technology intersect to transform the way we work, play, and communicate. We cannot quite put our finger on it, but that combo creates something kind of magical.</p>
-          <p>Bucharest is at the very heart of delivery for our biggest projects taking place across Europe, the home to Deloitte European Delivery Center. Opening mid-2016 the SAP team is already fast approaching 110 and set to double across next couple of months. From entry-level employees to senior leaders and we believe there’s always room to learn. We offer opportunities to help sharpen skills, work with industry-leading talent on a daily basis, in addition to hands-on experience in the global, fast-changing business world. From on-the-job learning experiences to formal training bootcamps, our professionals have a variety of opportunities to continue to grow throughout their career, while delivering products and services to Fortune 500 clients.</p>
+          <h5>How you benefit:</h5>
+          <ul>
+            <li>Start your journey to become an SAP Consultant;</li>
+            <li>Gain globally-recognized associate-level SAP Certifications;</li>
+            <li>Learn directly from Deloitte SAP experts;</li>
+            <li>Experience classroom and workshop-based training in SAP Technologies;</li>
+          </ul>
         </div>
+
         <div class="job-container__responsibilities grid">
           <h5>Responsibilities</h5>
-          <p>Interested in ERP Transformation, SAP Business Suite 4 SAP Hana and Simple Finance? Join our extraordinary team in Deloitte! Knowledge Matters. Experience Matters. Enthusiasm Matters. We have new openings in our SAP Service Line for SAP FI/CO Consultants.</p>
+          <p></p>
           <div class="resp__left">
-            <h6>In this role candidates should:</h6>
+            <h6>In this role, candidates should:</h6>
             <ul>
-              <li>Demonstrate interpersonal skills to form strong client relationships</li>
               <li>Have team player attitude</li>
+              <li>Possess business knowledge in Accounting, Month End Closing, Financial Reporting, Controlling, Treasury</li>
               <li>Have the willingness to develop new professional skills</li>
-              <li>Be fluent in English; German proficiency would be a plus</li>
-              <li>Work on projects from multiple geographies and across cultures</li>
-              <li>Have flexibility to travel in Europe as per project needs</li>
+              <li>Be fluent in English;</li>
             </ul>
           </div>
           <div class="resp__right">
-            <h6>The candidates’ responsibilities will be to:</h6>
+            <h6>The candidates' responsibilities after the boot camp will be to:</h6>
             <ul>
-              <li>Identify key client process and technology issues and recommending solutions</li>
-              <li>Contribute to the delivery of the scope, solution and deliverables of the project team, in alignment with client expectations</li>
-              <li>Deliver tasks for all phases of an SAP implementation design, build, test, implement</li>
-              <li>Support the practice by contributing material and development effort, to service area/competency/industry</li>
+              <li>identify key client process and technology issues and recommend solutions</li>
+              <li>contribute to the delivery of the scope, solution and deliverables of the project team, in alignment with client expectations</li>
+              <li>deliver tasks for all phases of an SAP implementation design, build, test, implement</li>
+              <li>support the practice by contributing material and development effort, to service area/competency/industry</li>
             </ul>
           </div>
         </div>
         <div class="job-container__requirements">
           <h5>Requirements</h5>
           <ul>
-            <li>Involvement in at least three project lifecycles from scoping to post go live support</li>
-            <li>Good knowledge of business processes and experience in making recommendations for process improvements</li>
-            <li>Detailed understanding and proven experience of at least one SAP FI/CO modules (GL - New GL with Segment Reporting, Accounts Receivable / FSCM, Accounts Payable / Banking, Cost Center Accounting, Cost Element Accounting & Internal Orders, Project Systems, Investment Management, Asset Accounting, Product Costing, COPA, FICA, PSCD, FSCD, Cash Management, Treasury) including transactions and configuration options</li>
-            <li>Experience in the integration with other SAP modules/Solutions (e.g. MM, SD, HR, BI, Portal)</li>
-          </ul>
-          <p>Additional desirable experience includes:</p>
-          <ul>
+            <li>Good knowledge of FI/ CO business processes</li>
+            <li>Good understanding and proven experience as business user on at least one SAP FI/CO module (GL - New GL with Segment Reporting, Accounts Receivable / FSCM, Accounts Payable / Banking, Cost Center Accounting, Cost Element Accounting & Internal Orders, Project Systems, Investment Management, Asset Accounting, Product Costing, COPA, FICA, PSCD, FSCD, Cash Management, Treasury) including transactions and configuration options</li>
             <li>Able to support the identification of key client process and technology issues and recommend solutions</li>
-            <li>Demonstrates expertise in SAP modules and associated business processes</li>
-            <li>Any SAP S/4 Hana Finance knowledge or experience is a plusProject Management</li>
-            <li>Able to deliver the scope, solution and deliverables of the work-stream, in alignment with client expectations</li>
           </ul>
         </div>
       </div>
-
+      <a href="https://www.linkedin.com/jobs/view/2796187132/" class="description-wrapper__btn desktop-link" data-job="1" target="_blank">Apply now</a>
       <div class="job-container" data-job="2">
         <h4 class="job-container__title flex">
           <span class="block"
@@ -248,7 +243,7 @@
           </ul>
         </div>
       </div>
-
+      <a href="https://www.linkedin.com/jobs/view/2794990092/" class="description-wrapper__btn desktop-link" data-job="2" target="_blank">Apply now</a>
       <div class="job-container" data-job="3">
         <h4 class="job-container__title flex">
           <span class="block"
@@ -302,7 +297,7 @@
           </ul>
         </div>
       </div>
-
+      <a href="https://www.linkedin.com/jobs/view/2794990092/" class="description-wrapper__btn desktop-link" data-job="3" target="_blank">Apply now</a>
       <div class="job-container" data-job="4">
         <h4 class="job-container__title flex">
           <span class="block"
@@ -346,7 +341,7 @@
           </ul>
         </div>
       </div>
-
+      <a href="https://www.linkedin.com/jobs/view/2796187742/" class="description-wrapper__btn desktop-link" data-job="4" target="_blank">Apply now</a>
       <div class="job-container" data-job="5">
         <h4 class="job-container__title flex">
           <span class="block"
@@ -382,6 +377,7 @@
           </ul>
         </div>
       </div>
+      <a href="https://www.linkedin.com/jobs/view/2794903274/" class="description-wrapper__btn desktop-link" data-job="5" target="_blank">Apply now</a>
     </div>
     <!-- Insert script -->
     <script src="js/svg-icons.js"></script>
