--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="e-header grid">
       <div class="e-header__left flex">
         <h1>Reimagine <span class="block nowrap">your career</span></h1>
-        <h2><span class="green block">Join us</span> as a SAP Consultant <span class="light block">@ Deloitte European Delivery Center</span><span class="locate block">Bucharest and other cities in Romania!</span></h2>
+        <h2><span class="green block">Join us</span> as a SAP Consultant <span class="light block">@ Deloitte European Delivery Centre</span><span class="locate block">Bucharest and other cities in Romania!</span></h2>
       </div>
       <div class="e-header__right">
         <img class="hero-img lazy-img" src="img/hero-img.png" data-src="img/hero-img.png" alt="Hero image" />
@@ -49,7 +49,7 @@
     </section>
     <section class="e-section section-2 grid">
       <div class="section-2__left flex">
-        <p class="section-2__title light"><span class="green bold">Deloitte European Delivery Center</span> in Bucharest delivers for some of the biggest Deloitte projects across Europe.</p>
+        <p class="section-2__title light"><span class="green bold">Deloitte European Delivery Centre</span> in Bucharest delivers for some of the biggest Deloitte projects across Europe.</p>
         <p class="light">Opening mid-2016, the <span class="bold">SAP team</span> is already fast approaching <span class="bold">fast approaching 300 colleagues and set to grow exponentially.</span> We are extremely proud of our award-winning SAP team, who has received multiple and consecutive <span class="bold">SAP Pinnacle Awards</span> during the last 7 years.</p>
         <p class="bold light">We strongly support our team members' career path, either for developing lateral skills or for upskilling, involving ou best trainers and the latest technologies.</p>
       </div>
@@ -107,27 +107,27 @@
       <div class="section-4__job flex">
         <h4>SAP Financial Consultant</h4>
         <p class="job-desc-button" data-job="1">Job Description <span class="arrow"></span></p>
-        <a href="https://www.linkedin.com/jobs/view/2796187132/" class="btn btn__apply desktop-link">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2796187132/" class="btn btn__apply desktop-link job-link-fin">Apply now</a>
       </div>
       <div class="section-4__job flex">
         <h4>SAP QM Consultant <span class="light block">Quality Management</span></h4>
         <p class="job-desc-button" data-job="2">Job Description <span class="arrow"></span></p>
-        <a href="https://www.linkedin.com/jobs/view/2794990092/" class="btn btn__apply desktop-link">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2794990092/" class="btn btn__apply desktop-link job-link-qm">Apply now</a>
       </div>
       <div class="section-4__job flex">
         <h4>SAP Consultant <span class="light block">Production Planning</span></h4>
         <p class="job-desc-button" data-job="3">Job Description <span class="arrow"></span></p>
-        <a href="https://www.linkedin.com/jobs/view/2794990092/" class="btn btn__apply desktop-link">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2794990092/" class="btn btn__apply desktop-link job-link-pp">Apply now</a>
       </div>
       <div class="section-4__job flex">
         <h4>SAP Logistics Consultant <span class="light block">(MM and/or SD)</span></h4>
         <p class="job-desc-button" data-job="4">Job Description <span class="arrow"></span></p>
-        <a href="https://www.linkedin.com/jobs/view/2796187742/" class="btn btn__apply desktop-link">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2796187742/" class="btn btn__apply desktop-link job-link-log">Apply now</a>
       </div>
       <div class="section-4__job flex">
         <h4>SAP EWM Consultant <span class="light block">Extended Warehouse Management</span></h4>
         <p class="job-desc-button" data-job="5">Job Description <span class="arrow"></span></p>
-        <a href="https://www.linkedin.com/jobs/view/2794903274/" class="btn btn__apply desktop-link">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2794903274/" class="btn btn__apply desktop-link job-link-ewm">Apply now</a>
       </div>
     </section>
     <section class="e-section section-5">
@@ -200,7 +200,7 @@
           </ul>
         </div>
       </div>
-      <a href="https://www.linkedin.com/jobs/view/2796187132/" class="description-wrapper__btn desktop-link" data-job="1" target="_blank">Apply now</a>
+      <a href="https://www.linkedin.com/jobs/view/2796187132/" class="description-wrapper__btn desktop-link job-link-fin" data-job="1" target="_blank">Apply now</a>
       <div class="job-container" data-job="2">
         <h4 class="job-container__title flex">
           <span class="block"
@@ -212,7 +212,7 @@
           <h5>Digital Background</h5>
           <p>We imagine, deliver and run the future.</p>
           <p>At Deloitte, the worlds of business, creative, and technology intersect to transform the way we work, play, and communicate. We cannot quite put our finger on it, but that combo creates something kind of magical.</p>
-          <p>Bucharest is at the very heart of delivery for our biggest projects taking place across Europe, the home to Deloitte European Delivery Center. Opening mid-2016 the SAP team is already fast approaching 110 and set to double across next couple of months.</p>
+          <p>Bucharest is at the very heart of delivery for our biggest projects taking place across Europe, the home to Deloitte European Delivery Centre. Opening mid-2016 the SAP team is already fast approaching 110 and set to double across next couple of months.</p>
           <p>From entry-level employees to senior leaders and we believe there’s always room to learn. We offer opportunities to help sharpen skills, work with industry-leading talent on a daily basis, in addition to hands-on experience in the global, fast-changing business world. From on-the-job learning experiences to formal training bootcamps, our professionals have a variety of opportunities to continue to grow throughout their career, while delivering products and services to Fortune 500 clients.</p>
         </div>
         <div class="job-container__responsibilities">
@@ -243,7 +243,7 @@
           </ul>
         </div>
       </div>
-      <a href="https://www.linkedin.com/jobs/view/2794990092/" class="description-wrapper__btn desktop-link" data-job="2" target="_blank">Apply now</a>
+      <a href="https://www.linkedin.com/jobs/view/2794990092/" class="description-wrapper__btn desktop-link job-link-qm" data-job="2" target="_blank">Apply now</a>
       <div class="job-container" data-job="3">
         <h4 class="job-container__title flex">
           <span class="block"
@@ -256,7 +256,7 @@
           <p>We imagine, deliver and run the future.</p>
           <p>At Deloitte, the worlds of business, creative, and technology intersect to transform the way we work, play, and communicate. We cannot quite put our finger on it, but that combo creates something kind of magical.</p>
 
-          <p>Bucharest is at the very heart of delivery for our biggest projects taking place across Europe, the home to Deloitte European Delivery Center. Opening mid-2016 the SAP team is already fast approaching 110 and set to double across next couple of months.</p>
+          <p>Bucharest is at the very heart of delivery for our biggest projects taking place across Europe, the home to Deloitte European Delivery Centre. Opening mid-2016 the SAP team is already fast approaching 110 and set to double across next couple of months.</p>
           <p>From entry-level employees to senior leaders and we believe there’s always room to learn. We offer opportunities to help sharpen skills, work with industry-leading talent on a daily basis, in addition to hands-on experience in the global, fast-changing business world. From on-the-job learning experiences to formal training bootcamps, our professionals have a variety of opportunities to continue to grow throughout their career, while delivering products and services to Fortune 500 clients.</p>
         </div>
         <div class="job-container__responsibilities">
@@ -297,7 +297,7 @@
           </ul>
         </div>
       </div>
-      <a href="https://www.linkedin.com/jobs/view/2794990092/" class="description-wrapper__btn desktop-link" data-job="3" target="_blank">Apply now</a>
+      <a href="https://www.linkedin.com/jobs/view/2794990092/" class="description-wrapper__btn desktop-link job-link-pp" data-job="3" target="_blank">Apply now</a>
       <div class="job-container" data-job="4">
         <h4 class="job-container__title flex">
           <span class="block"
@@ -311,7 +311,7 @@
           <p>We imagine, deliver and run the future.</p>
           <p>At Deloitte, the worlds of business, creative, and technology intersect to transform the way we work, play, and communicate. We cannot quite put our finger on it, but that combo creates something kind of magical.</p>
 
-          <p>Bucharest is at the very heart of delivery for our biggest projects taking place across Europe, the home to Deloitte European Delivery Center. Opening mid-2016 the SAP team is already fast approaching 110 and set to double across next couple of months.</p>
+          <p>Bucharest is at the very heart of delivery for our biggest projects taking place across Europe, the home to Deloitte European Delivery Centre. Opening mid-2016 the SAP team is already fast approaching 110 and set to double across next couple of months.</p>
           <p>From entry-level employees to senior leaders and we believe there’s always room to learn. We offer opportunities to help sharpen skills, work with industry-leading talent on a daily basis, in addition to hands-on experience in the global, fast-changing business world. From on-the-job learning experiences to formal training bootcamps, our professionals have a variety of opportunities to continue to grow throughout their career, while delivering products and services to Fortune 500 clients.</p>
         </div>
         <div class="job-container__responsibilities">
@@ -341,7 +341,7 @@
           </ul>
         </div>
       </div>
-      <a href="https://www.linkedin.com/jobs/view/2796187742/" class="description-wrapper__btn desktop-link" data-job="4" target="_blank">Apply now</a>
+      <a href="https://www.linkedin.com/jobs/view/2796187742/" class="description-wrapper__btn desktop-link job-link-log" data-job="4" target="_blank">Apply now</a>
       <div class="job-container" data-job="5">
         <h4 class="job-container__title flex">
           <span class="block"
@@ -352,7 +352,7 @@
         <div class="job-container__background">
           <h5>Digital Background</h5>
           <p>We imagine, deliver and run the future. At Deloitte, the worlds of business, creative, and technology intersect to transform the way we work, play, and communicate. We cannot quite put our finger on it, but that combo creates something kind of magical.</p>
-          <p>Bucharest is at the very heart of delivery for our biggest projects taking place across Europe, the home to Deloitte European Delivery Center. Opening mid-2016 the SAP team is already fast approaching 110 and set to double across next couple of months. From entry-level employees to senior leaders and we believe there’s always room to learn. We offer opportunities to help sharpen skills, work with industry-leading talent on a daily basis, in addition to hands-on experience in the global, fast-changing business world. From on-the-job learning experiences to formal training bootcamps, our professionals have a variety of opportunities to continue to grow throughout their career, while delivering products and services to Fortune 500 clients.</p>
+          <p>Bucharest is at the very heart of delivery for our biggest projects taking place across Europe, the home to Deloitte European Delivery Centre. Opening mid-2016 the SAP team is already fast approaching 110 and set to double across next couple of months. From entry-level employees to senior leaders and we believe there’s always room to learn. We offer opportunities to help sharpen skills, work with industry-leading talent on a daily basis, in addition to hands-on experience in the global, fast-changing business world. From on-the-job learning experiences to formal training bootcamps, our professionals have a variety of opportunities to continue to grow throughout their career, while delivering products and services to Fortune 500 clients.</p>
         </div>
         <div class="job-container__responsibilities">
           <h5>Responsibilities</h5>
@@ -377,7 +377,7 @@
           </ul>
         </div>
       </div>
-      <a href="https://www.linkedin.com/jobs/view/2794903274/" class="description-wrapper__btn desktop-link" data-job="5" target="_blank">Apply now</a>
+      <a href="https://www.linkedin.com/jobs/view/2794903274/" class="description-wrapper__btn desktop-link job-link-ewm" data-job="5" target="_blank">Apply now</a>
     </div>
     <!-- Insert script -->
     <script src="js/svg-icons.js"></script>
