--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
       <p class="light">How can you navigate relentless disruption and tomorrow's uncertainty? By becoming a more Kinetic Enterprise™ - an intelligent enterprise built to evolve. It's time to reimagine everything. Deloitte can show you how - and help you make an impact with SAP® solutions</p>
       <p class="light">Deloitte received four 2019 SAP® Pinnacle Awards. Named Digital partner of the Year, as well as Partner of the Year for Customer Experience and SAP® SuccessFactors® - also winning for PurposeDriven partner Application of the Year. This year marks the second year in a row that Deloitte has received four SAP Pinnacle Awards - the most received by any SAP partner in 2019, or any other year.</p>
       <div class="awards-wrapper flex">
-        <img src="img/award1.png" alt="SAP Award" class="awards__image" />
-        <img src="img/award2.png" alt="SAP Award" class="awards__image" />
-        <img src="img/award3.png" alt="SAP Award" class="awards__image" />
-        <img src="img/award4.png" alt="SAP Award" class="awards__image" />
-        <img src="img/award5.png" alt="SAP Award" class="awards__image" />
+        <img src="img/award1.png" alt="SAP Award" class="awards__image lazy-img" />
+        <img src="img/award2.png" alt="SAP Award" class="awards__image lazy-img" />
+        <img src="img/award3.png" alt="SAP Award" class="awards__image lazy-img" />
+        <img src="img/award4.png" alt="SAP Award" class="awards__image lazy-img" />
+        <img src="img/award5.png" alt="SAP Award" class="awards__image lazy-img" />
       </div>
     </section>
     <section class="e-section section-6">
