--- a/index.html
+++ b/index.html
@@ -107,27 +107,27 @@
       <div class="section-4__job flex">
         <h4>SAP Financial Consultant</h4>
         <p class="job-desc-button" data-job="1">Job Description <span class="arrow"></span></p>
-        <a href="https://www.linkedin.com/jobs/view/2796187132/" class="btn btn__apply desktop-link job-link-fin">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2796187132/" class="btn btn__apply desktop-link job-link-fin" target="_blank">Apply now</a>
       </div>
       <div class="section-4__job flex">
         <h4>SAP QM Consultant <span class="light block">Quality Management</span></h4>
         <p class="job-desc-button" data-job="2">Job Description <span class="arrow"></span></p>
-        <a href="https://www.linkedin.com/jobs/view/2794990092/" class="btn btn__apply desktop-link job-link-qm">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2794990092/" class="btn btn__apply desktop-link job-link-qm" target="_blank">Apply now</a>
       </div>
       <div class="section-4__job flex">
         <h4>SAP Consultant <span class="light block">Production Planning</span></h4>
         <p class="job-desc-button" data-job="3">Job Description <span class="arrow"></span></p>
-        <a href="https://www.linkedin.com/jobs/view/2794990092/" class="btn btn__apply desktop-link job-link-pp">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2794990092/" class="btn btn__apply desktop-link job-link-pp" target="_blank">Apply now</a>
       </div>
       <div class="section-4__job flex">
         <h4>SAP Logistics Consultant <span class="light block">(MM and/or SD)</span></h4>
         <p class="job-desc-button" data-job="4">Job Description <span class="arrow"></span></p>
-        <a href="https://www.linkedin.com/jobs/view/2796187742/" class="btn btn__apply desktop-link job-link-log">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2796187742/" class="btn btn__apply desktop-link job-link-log" target="_blank">Apply now</a>
       </div>
       <div class="section-4__job flex">
         <h4>SAP EWM Consultant <span class="light block">Extended Warehouse Management</span></h4>
         <p class="job-desc-button" data-job="5">Job Description <span class="arrow"></span></p>
-        <a href="https://www.linkedin.com/jobs/view/2794903274/" class="btn btn__apply desktop-link job-link-ewm">Apply now</a>
+        <a href="https://www.linkedin.com/jobs/view/2794903274/" class="btn btn__apply desktop-link job-link-ewm" target="_blank">Apply now</a>
       </div>
     </section>
     <section class="e-section section-5">
